# WSM_project2

./: .gitignore  README.md  indexing.sh  model.pth  optimizeBM25.py  pyproject.toml  search.py
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
eval_part1/: LM_JM_nostem.run  LM_JM_stem.run  MLE_nostem.run  MLE_stem.run  bm25_nostem.run  bm25_stem.run
eval_part2/: LM_JM_nostem.run  LM_JM_stem.run  MLE_nostem.run  MLE_stem.run  bm25_nostem.run  bm25_stem.run  eval.py  mymodel.run
part2/: eval_part1.py  train.py
proj2_sample_run/data/: qrels.401-440.txt  qrels.401.txt  qrels.441-450.txt  topics.401-440.txt  topics.401.txt  topics.441-450.txt
proj2_sample_run/sparse_retrieval/: clean.sh  run.sh  trec_eval.pl
proj2_sample_run/sparse_retrieval/codes/: build_index.sh  build_trecweb_index.sh  convert_wt2g_to_jsonl.py  main.py  search.py  util.py
runs/: LM_JM_nostem.run  LM_JM_stem.run  MLE_nostem.run  MLE_stem.run  bm25_nostem.run  bm25_stem.run
searchers/LM_Jelinek_Mercer/: searcher.py
