[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["timsu92 <33785401+timsu92@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^2.5.1", source = "torch" }
# torchvision = { version = "^0.20.1", source = "torch" }
# torchaudio = { version = "^2.5.1", source = "torch" }
pyserini = "^0.43.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.67.0"
tensorboard = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
